added ranger confidence estimation function This function was lifted from randomForestCI and adapted for ranger

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(AICFromR2)
 export(AICcFromR2)
 export(BICFromR2)
 export(formulaMaker)
+export(rInfJack)
 export(rangeit)
+export(rangerInfJack)
+export(rangerInfJackMulticlass)
 export(richardson)
 export(solow)
