--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,18 @@
 export(AICFromR2)
 export(AICcFromR2)
 export(BICFromR2)
+export(extract.ncdf)
 export(formulaMaker)
+export(geo.to.num)
+export(keep.asking)
 export(rInfJack)
 export(rangeit)
 export(rangerInfJack)
 export(rangerInfJackMulticlass)
 export(richardson)
+export(simData)
 export(solow)
+import(RandomFields)
+import(ncdf4)
+import(raster)
+import(wordspace)
