--- a/FReibier/DESCRIPTION
+++ b/FReibier/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(person("Carsten", "Dormann", email = "carsten.dormann@biom.uni-frei
 Author: Carsten Dormann [aut, cre], Severin Hauenstein [aut]
 Maintainer: Carsten Dormann <carsten.dormann@biom.uni-freiburg.de>
 Description: This package contains an assortment of functions: AIC from R2, creating quadratic and interactions terms for a GLM-formula, error bars for ranger predictions, generating spatially autocorrelated data.
-Depends: R (>= 3.0.0), ranger, ncdf4, RandomFields, raster, wordspace
+Depends: R (>= 3.0.0), ncdf4, RandomFields, raster, wordspace
 License: GPL
 Encoding: UTF-8
 LazyData: true
